--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server/server.js",
+        "start2": "./node_modules/nodemon/bin/nodemon.js server/server.js",
         "dev": "./node_modules/nodemon/bin/nodemon.js server/server --ignore 'server/*.json' ",
         "generate-vapid": "./node_modules/web-push/src/cli.js generate-vapid-keys --json > server/vapid.json"
     },
@@ -13,11 +14,11 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.18.3",
-        "express": "^4.16.3",
+        "express": "^4.17.1",
         "urlsafe-base64": "^1.0.0",
-        "web-push": "^3.3.3"
+        "web-push": "^3.4.4"
     },
     "devDependencies": {
-        "nodemon": "^1.18.4"
+        "nodemon": "^2.0.7"
     }
 }
